# python-web-hw07

./: README.md  alembic.ini  config.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 077d62ee0a18_init.py  6ac6e493eb42_init.py  d27e0a5b9893_init.py
python_web_hw07/: connect_db.py  main.py  models.py  my_select.py  seed.py  window.py
