[tool.poetry]
name = "python-web-hw07"
version = "0.1.0"
description = ""
authors = ["FTKV <mthkvv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
faker = "^19.6.2"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.8"
async-tkinter-loop = "^0.9.1"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
